web.blade.php includes scripts of jacascript

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,3 +18,8 @@ services:
     build:
       context: ./mysql_setting
       dockerfile: Dockerfile
+    volumes:
+    - datavolume:/var/lib/mysql
+
+volumes:
+  datavolume: {}
