memory_limit in php.ini set to increase the size of it

--- a/php_setting/php.ini
+++ b/php_setting/php.ini
@@ -3,6 +3,7 @@ post_max_size = 108M
 upload_max_filesize = 100M
 error_log = /dev/stderr
 fastcgi.logging = 1
+memory_limit = -1
 
 [Date]
 date.timezone = "Asia/Tokyo"
